--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -30,7 +30,7 @@ ec2_Hello:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java2.scenario.describe_securitygroup.main
+                - ec2.java2.describe_security_groups.main
     Python:
       versions:
         - sdk_version: 3
@@ -71,7 +71,7 @@ ec2_Hello:
     Rust:
       versions:
         - sdk_version: 1
-          github: rustv1/examples/ec2
+          github: rust/examples/ec2
           excerpts:
             - snippet_tags:
                 - ec2.rust.ec2-helloworld
@@ -118,7 +118,7 @@ ec2_CreateKeyPair:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java2.scenario.create_key_pair.main
+                - ec2.java2.create_key_pair.main
     Python:
       versions:
         - sdk_version: 3
@@ -216,7 +216,7 @@ ec2_DescribeKeyPairs:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java.scenario_describe_keys.main
+                - ec2.java2.describe_key_pairs.main
     Python:
       versions:
         - sdk_version: 3
@@ -302,7 +302,7 @@ ec2_CreateSecurityGroup:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java.scenario_inbound_rule.main
+                - ec2.java2.create_security_group.main
     Python:
       versions:
         - sdk_version: 3
@@ -482,7 +482,7 @@ ec2_StartInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java2.scenario.start_instance.main
+                - ec2.java2.start_stop_instance.start
     Python:
       versions:
         - sdk_version: 3
@@ -580,7 +580,7 @@ ec2_StopInstances:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java2.scenario.stop_instance.main
+                - ec2.java2.start_stop_instance.stop
     Python:
       versions:
         - sdk_version: 3
@@ -677,7 +677,7 @@ ec2_AllocateAddress:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java2.scenario.allocate_address.main
+                - ec2.java2.allocate_address.main
     Python:
       versions:
         - sdk_version: 3
@@ -1030,7 +1030,7 @@ ec2_AuthorizeSecurityGroupIngress:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java.scenario_inbound_rule.main
+                - ec2.java2.create_security_group.main
     Python:
       versions:
         - sdk_version: 3
@@ -1249,7 +1249,7 @@ ec2_DescribeSecurityGroups:
     Rust:
       versions:
         - sdk_version: 1
-          github: rustv1/examples/ec2
+          github: rust/examples/ec2
           excerpts:
             - snippet_tags:
                 - ec2.rust.ec2-helloworld
@@ -1334,7 +1334,7 @@ ec2_DeleteSecurityGroup:
     Rust:
       versions:
         - sdk_version: 1
-          github: rustv1/examples/ec2
+          github: rust/examples/ec2
           excerpts:
             - snippet_tags:
                 - ec2.rust.delete_security_group.impl
@@ -1447,7 +1447,7 @@ ec2_TerminateInstances:
     Rust:
       versions:
         - sdk_version: 1
-          github: rustv1/examples/ec2
+          github: rust/examples/ec2
           excerpts:
             - snippet_tags:
                 - ec2.rust.delete_instance.impl
@@ -2150,13 +2150,15 @@ ec2_DescribeSubnets:
   services:
     ec2: {DescribeSubnets}
 ec2_Scenario_GetStartedInstances:
+  title: Get started with &EC2; instances using an &AWS; SDK
+  title_abbrev: Get started with instances
   synopsis_list:
     - Create a key pair and security group.
     - Select an Amazon Machine Image (AMI) and compatible instance type, then create an instance.
     - Stop and restart the instance.
     - Associate an Elastic IP address with your instance.
     - Connect to your instance with SSH, then clean up resources.
-  category: Basics
+  category: Scenarios
   languages:
     .NET:
       versions:
