--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -2215,7 +2215,10 @@ ec2_Scenario_GetStartedInstances:
           github: javascriptv3/example_code/ec2
           sdkguide:
           excerpts:
-            - description: This file contains logic to run the example as a whole.
+            - description: |
+                This file contains a list of common actions used with EC2. The steps are constructed
+                with a Scenario framework that simplifies running an interactive example. For the full
+                context, visit the GitHub repository.
               snippet_files:
                 - javascriptv3/example_code/ec2/scenarios/steps.js 
     Bash:
