updated EC2 YAML file

--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -2158,7 +2158,7 @@ ec2_Scenario_GetStartedInstances:
     - Stop and restart the instance.
     - Associate an Elastic IP address with your instance.
     - Connect to your instance with SSH, then clean up resources.
-  category: Scenarios
+  category: Basics
   languages:
     .NET:
       versions:
@@ -2187,9 +2187,12 @@ ec2_Scenario_GetStartedInstances:
           github: javav2/example_code/ec2
           sdkguide:
           excerpts:
-            - description:
+            - description: Run a scenario at a command prompt.
               snippet_tags:
                 - ec2.java2.scenario.main
+            - description: Define a class that wraps EC2 actions.
+              snippet_tags:
+                - ec2.java2.actions.main  
     Python:
       versions:
         - sdk_version: 3
