updated YAML Java tags

--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -216,7 +216,7 @@ ec2_DescribeKeyPairs:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java.scenario_describe_keys.main
+                - ec2.java2.describe_key_pairs.main
     Python:
       versions:
         - sdk_version: 3
