--- a/.doc_gen/metadata/iam_metadata.yaml
+++ b/.doc_gen/metadata/iam_metadata.yaml
@@ -578,7 +578,8 @@ iam_CreateAccessKey:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.createaccesskey
     Bash:
@@ -686,7 +687,8 @@ iam_DeleteAccessKey:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.deleteaccesskey
     Bash:
@@ -1021,7 +1023,8 @@ iam_CreatePolicy:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.createpolicy
     Bash:
@@ -1112,7 +1115,8 @@ iam_DeletePolicy:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.deletepolicy
     Bash:
@@ -1209,7 +1213,8 @@ iam_ListPolicies:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.listpolicies.handler.listpolicies
     C++:
@@ -1296,7 +1301,8 @@ iam_GetPolicy:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.getpolicy.handler.getpolicy
     C++:
@@ -1417,7 +1423,8 @@ iam_AttachRolePolicy:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.attachrolepolicy.handler.attachrolepolicy
     JavaScript:
@@ -1533,7 +1540,8 @@ iam_ListAttachedRolePolicies:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.listattachedrolepolicies.handler.listattachedrolepolicies
   services:
@@ -1634,7 +1642,8 @@ iam_DetachRolePolicy:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.detachrolepolicy
     Bash:
@@ -1740,7 +1749,8 @@ iam_CreateRole:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.createrole.handler.createrole
     JavaScript:
@@ -1847,7 +1857,8 @@ iam_ListRoles:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.listroles.handler.listroles
   services:
@@ -1920,7 +1931,8 @@ iam_GetRole:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.getrole.handler.getrole
   services:
@@ -1984,7 +1996,8 @@ iam_DeleteRole:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.deleterole
     Bash:
@@ -2098,7 +2111,8 @@ iam_ListRolePolicies:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.listrolepolicies.handler.listrolepolicies
   services:
@@ -2199,7 +2213,8 @@ iam_CreateUser:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.createuser.handler.createuser
     Go:
@@ -2342,7 +2357,8 @@ iam_DeleteUser:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.deleteuser
     Bash:
@@ -2465,7 +2481,8 @@ iam_ListUsers:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.listusers.handler.listusers
     Go:
@@ -2673,7 +2690,8 @@ iam_PutUserPolicy:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.putuserpolicy
   services:
@@ -2732,7 +2750,8 @@ iam_DeleteUserPolicy:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.basics.iam.deleteuserpolicy
   services:
@@ -3093,7 +3112,8 @@ iam_ListGroups:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.listgroups.handler.listgroups
   services:
@@ -3179,7 +3199,8 @@ iam_CreateServiceLinkedRole:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSIAM</programlisting>
               snippet_tags:
                 - iam.swift.createservicelinkedrole.handler.createservicelinkedrole
   services:
