Add imports to STS metadata

--- a/.doc_gen/metadata/sts_metadata.yaml
+++ b/.doc_gen/metadata/sts_metadata.yaml
@@ -68,7 +68,8 @@ sts_AssumeRole:
         - sdk_version: 1
           github: swift/example_code/iam
           excerpts:
-            - description:
+            - description: >-
+                <programlisting language="swift" linenumbering="unnumbered">import AWSSTS</programlisting>
               snippet_tags:
                 - iam.swift.basics.sts.assumerole
 
