updated the Readme file

--- a/.doc_gen/metadata/ec2_metadata.yaml
+++ b/.doc_gen/metadata/ec2_metadata.yaml
@@ -677,7 +677,7 @@ ec2_AllocateAddress:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java2.scenario.allocate_address.main
+                - ec2.java2.allocate_address.main
     Python:
       versions:
         - sdk_version: 3
@@ -1030,7 +1030,7 @@ ec2_AuthorizeSecurityGroupIngress:
           excerpts:
             - description:
               snippet_tags:
-                - ec2.java.scenario_inbound_rule.main
+                - ec2.java2.create_security_group.main
     Python:
       versions:
         - sdk_version: 3
