--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -16,7 +16,7 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@release/2024-08-26-B
+        uses: awsdocs/aws-doc-sdk-examples-tools@2024-08-28-A
         with:
           doc_gen_only: "False"
           strict_titles: "True"
