Javascript v3 SSM Basics scenario

--- a/.doc_gen/metadata/ssm_metadata.yaml
+++ b/.doc_gen/metadata/ssm_metadata.yaml
@@ -13,6 +13,15 @@ ssm_Hello:
             - description:
               snippet_tags:
                 - ssm.java2.hello.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.hello
     Python:
       versions:
         - sdk_version: 3
@@ -88,6 +97,15 @@ ssm_CreateOpsItem:
             - description:
               snippet_tags:
                 - ssm.java2.create_ops.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.createOpsItem
     Python:
       versions:
         - sdk_version: 3
@@ -111,6 +129,15 @@ ssm_UpdateMaintenanceWindow:
             - description:
               snippet_tags:
                 - ssm.java2.update_window.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.updateMaintenanceWindow
     Python:
       versions:
         - sdk_version: 3
@@ -134,6 +161,15 @@ ssm_CreateMaintenanceWindow:
             - description:
               snippet_tags:
                 - ssm.java2.create_window.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.createMaintenanceWindow
     Python:
       versions:
         - sdk_version: 3
@@ -157,6 +193,15 @@ ssm_SendCommand:
             - description:
               snippet_tags:
                 - ssm.Java2.send_command.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.sendCommand
     Python:
       versions:
         - sdk_version: 3
@@ -171,6 +216,15 @@ ssm_SendCommand:
     ssm: {SendCommand}
 ssm_ListCommandInvocations:
   languages:
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.listCommandInvocations
     Python:
       versions:
         - sdk_version: 3
@@ -194,6 +248,15 @@ ssm_CreateDocument:
             - description:
               snippet_tags:
                 - ssm.java2.create_doc.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.createDocument
     Python:
       versions:
         - sdk_version: 3
@@ -217,6 +280,15 @@ ssm_DescribeOpsItems:
             - description:
               snippet_tags:
                 - ssm.java2.describe_ops.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.describeOpsItems
     Python:
       versions:
         - sdk_version: 3
@@ -254,6 +326,15 @@ ssm_DeleteMaintenanceWindow:
             - description:
               snippet_tags:
                 - ssm.java2.delete_window.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.deleteMaintenanceWindow
     Python:
       versions:
         - sdk_version: 3
@@ -277,6 +358,15 @@ ssm_DeleteDocument:
             - description:
               snippet_tags:
                 - ssm.Java2.delete_doc.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.deleteDocument
     Python:
       versions:
         - sdk_version: 3
@@ -300,6 +390,15 @@ ssm_UpdateOpsItem:
             - description:
               snippet_tags:
                 - ssm.Java2.resolve_ops.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.updateOpsItem
     Python:
       versions:
         - sdk_version: 3
@@ -328,6 +427,15 @@ ssm_Scenario:
             - description: A wrapper class for &SYS; SDK methods.
               snippet_tags:
                 - ssm.java2.actions.main    
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/ssm
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - ssm.JavaScript.Basics.scenario
     Python:
       versions:
         - sdk_version: 3
