Large refactor of Rust s3 audit work.
All operations return Result<_, S3ExampleError>.
Working through remaining punchlist items for audit quality.

--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -74,6 +74,9 @@ s3_Hello:
           excerpts:
             - snippet_tags:
                 - s3.rust.s3-helloworld
+            - description: S3ExampleError utilities
+            - snippet_tags:
+                - s3.rust.s3-example-error
   services:
     s3: {ListBuckets}
 s3_CreateBucket:
