--- a/rustv1/examples/s3/Cargo.toml
+++ b/rustv1/examples/s3/Cargo.toml
@@ -4,16 +4,9 @@ version = "0.1.0"
 authors = [
   "Russell Cohen <rcoh@amazon.com>",
   "Doug Schwartz <dougsch@amazon.com>",
+  "David Souther <davidsouther@gmail.com>"
 ]
 edition = "2021"
-
-[lib]
-name = "s3_service"
-path = "src/s3-service-lib.rs"
-
-[[bin]]
-name = "s3_getting_started"
-path = "src/bin/s3-getting-started.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dev-dependencies]
