--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -182,7 +182,7 @@ s3_CreateBucket:
           excerpts:
             - description:
               snippet_tags:
-                - rust.example_code.s3.basics.create_bucket
+                - s3.rust.create_bucket
     SAP ABAP:
       versions:
         - sdk_version: 1
@@ -311,7 +311,7 @@ s3_CopyObject:
           excerpts:
             - description:
               snippet_tags:
-                - rust.example_code.s3.copy_object
+                - s3.rust.copy_object
     SAP ABAP:
       versions:
         - sdk_version: 1
@@ -459,7 +459,7 @@ s3_DeleteObject:
           excerpts:
             - description:
               snippet_tags:
-                - s3.rust.delete-object
+                - s3.rust.delete_object
     JavaScript:
       versions:
         - sdk_version: 3
@@ -598,7 +598,7 @@ s3_DeleteObjects:
           excerpts:
             - description:
               snippet_tags:
-                - rust.example_code.s3.basics.delete_objects
+                - s3.rust.delete_objects
     Swift:
       versions:
         - sdk_version: 1
@@ -1346,7 +1346,7 @@ s3_ListObjectsV2:
           excerpts:
             - description:
               snippet_tags:
-                - rust.example_code.s3.basics.list_objects
+                - s3.rust.list_objects
     JavaScript:
       versions:
         - sdk_version: 3
@@ -1521,7 +1521,7 @@ s3_PutObject:
           excerpts:
             - description:
               snippet_tags:
-                - rust.example_code.s3.basics.put_object
+                - s3.rust.upload_object
     JavaScript:
       versions:
         - sdk_version: 3
@@ -2376,9 +2376,9 @@ s3_UploadPart:
         - sdk_version: 1
           github: rustv1/examples/s3
           excerpts:
-            - description:
-              snippet_tags:
+            - snippet_tags:
                 - rust.example_code.s3.upload_part
+            - snippet_tags:
                 - rust.example_code.s3.upload_part.CompletedMultipartUpload
     C++:
       versions:
@@ -2757,9 +2757,11 @@ s3_Scenario_PresignedUrl:
         - sdk_version: 1
           github: rustv1/examples/s3
           excerpts:
-            - description: Create presigning requests to GET and PUT S3 objects.
+            - description: Create presigning requests to GET S3 objects.
               snippet_tags:
                 - s3.rust.get-object-presigned
+            - description: Create presigning requests to PUT S3 objects.
+              snippet_tags:
                 - s3.rust.put-object-presigned
     C++:
       versions:
@@ -2952,11 +2954,17 @@ s3_Scenario_GettingStarted:
           github: rustv1/examples/s3
           excerpts:
             - description: Code for the binary crate which runs the scenario.
+              snippet_files:
+                - rustv1/examples/s3/src/bin/s3-getting-started.rs
+            - description: Common actions used by the scenario.
               snippet_tags:
-                - rust.example_code.s3.scenario_getting_started.bin
-            - description: A library crate with common actions called by the binary.
-              snippet_tags:
-                - rust.example_code.s3.scenario_getting_started.lib
+                - s3.rust.create_bucket
+                - s3.rust.upload_object
+                - s3.rust.download_object
+                - s3.rust.copy_object
+                - s3.rust.list_objects
+                - s3.rust.clear_bucket
+                - s3.rust.delete_bucket
     C++:
       versions:
         - sdk_version: 1
